--- a/cookies_testing.ipynb
+++ b/cookies_testing.ipynb
@@ -637,6 +637,10 @@
     "def square_root(x: Union[int, float]) -> Union[int, float]:\n",
     "    return x ** 0.5\n",
     "\n",
+    "\n",
+    "## Are both of the below true statements?\n",
+    "## Can we fix this? Look up documentation on hypothesis strategy filtering.\n",
+    "## NB: Creation of two new tests with appropriate filters. ~ 6-8 lines total.\n",
     "@given(s=st.integers())\n",
     "def test_inverses_integers(s):\n",
     "    assert np.isclose(s, square(square_root(s)))\n",
