--- a/cookies_testing.ipynb
+++ b/cookies_testing.ipynb
@@ -386,7 +386,7 @@
     "        List[Dict[str, str]]: The raw data from the CSV as a list of dictionaries.\n",
     "    \"\"\"\n",
     "    with open(filename, newline='') as csvfile:\n",
-    "        reader = csv.DictReader(csvfile)\n",
+    "        reader = csv.DictReader(csvfile, delimiter=',')\n",
     "        return [row for row in reader]\n",
     "\n",
     "def create_star_objects(data: List[Dict[str, str]]) -> List[Star]:\n",
@@ -692,7 +692,7 @@
     "\n",
     "You can also set up automatic jobs to run all tests when you commit your code to GitHub. This will send you an email if your tests fail!\n",
     "\n",
-    "Have a look at the file in the .github/workflows directory to see how this works.\n",
+    "Have a look at the file in the .github/workflows directory to see how this works. You may need to Show Hidden Files via Settings -> Settings Editor. Alternatively you can see it here: https://github.com/jdgsmallwood/cookies-testing/blob/main/.github/workflows/run-tests.yaml\n",
     "\n",
     "You can also see the output of test runs at https://github.com/jdgsmallwood/cookies-testing/actions"
    ]
