--- a/cookies_testing.ipynb
+++ b/cookies_testing.ipynb
@@ -46,6 +46,7 @@
     "# Import at beginning of notebook\n",
     "import ipytest\n",
     "import pytest\n",
+    "\n",
     "ipytest.autoconfig()"
    ]
   },
@@ -326,11 +327,13 @@
     "import csv\n",
     "from typing import List\n",
     "\n",
+    "\n",
     "class Star:\n",
     "    def __init__(self, name: str, distance: float, luminosity: float):\n",
     "        self.name = name\n",
     "        self.distance = distance\n",
     "        self.luminosity = luminosity\n",
+    "\n",
     "\n",
     "def process_astronomy_data(filename: str) -> List[Star]:\n",
     "    \"\"\"\n",
@@ -338,22 +341,21 @@
     "\n",
     "    Args:\n",
     "        filename (str): Path to the CSV file containing star data.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        List[Star]: A list of Star objects created from the CSV file.\n",
     "    \"\"\"\n",
     "    stars = []\n",
-    "    with open(filename, newline='') as csvfile:\n",
+    "    with open(filename, newline=\"\") as csvfile:\n",
     "        reader = csv.DictReader(csvfile)\n",
     "        for row in reader:\n",
-    "            name = row['Name']\n",
-    "            distance = float(row['Distance'])\n",
-    "            luminosity = float(row['Luminosity'])\n",
+    "            name = row[\"Name\"]\n",
+    "            distance = float(row[\"Distance\"])\n",
+    "            luminosity = float(row[\"Luminosity\"])\n",
     "            star = Star(name, distance, luminosity)\n",
     "            stars.append(star)\n",
-    "    \n",
-    "    return stars\n",
-    "\n"
+    "\n",
+    "    return stars"
    ]
   },
   {
@@ -375,46 +377,49 @@
     "\n",
     "from typing import List, Dict\n",
     "\n",
+    "\n",
     "def read_star_data(filename: str) -> List[Dict[str, str]]:\n",
     "    \"\"\"\n",
     "    Reads a CSV file and returns the data as a list of dictionaries.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        filename (str): Path to the CSV file containing star data.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        List[Dict[str, str]]: The raw data from the CSV as a list of dictionaries.\n",
     "    \"\"\"\n",
-    "    with open(filename, newline='') as csvfile:\n",
-    "        reader = csv.DictReader(csvfile, delimiter=',')\n",
+    "    with open(filename, newline=\"\") as csvfile:\n",
+    "        reader = csv.DictReader(csvfile, delimiter=\",\")\n",
     "        return [row for row in reader]\n",
+    "\n",
     "\n",
     "def create_star_objects(data: List[Dict[str, str]]) -> List[Star]:\n",
     "    \"\"\"\n",
     "    Converts raw star data into Star objects.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        data (List[Dict[str, str]]): Raw data containing star information.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        List[Star]: A list of Star objects created from the raw data.\n",
     "    \"\"\"\n",
     "    stars = []\n",
     "    for row in data:\n",
-    "        name = row['Name']\n",
-    "        distance = float(row['Distance'])\n",
-    "        luminosity = float(row['Luminosity'])\n",
+    "        name = row[\"Name\"]\n",
+    "        distance = float(row[\"Distance\"])\n",
+    "        luminosity = float(row[\"Luminosity\"])\n",
     "        star = Star(name, distance, luminosity)\n",
     "        stars.append(star)\n",
     "    return stars\n",
     "\n",
+    "\n",
     "def process_astronomy_data(filename: str) -> List[Star]:\n",
     "    \"\"\"\n",
     "    Processes the astronomy data by reading and creating Star objects.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        filename (str): Path to the CSV file containing star data.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        List[Star]: A list of Star objects.\n",
     "    \"\"\"\n",
@@ -554,7 +559,7 @@
    "outputs": [],
    "source": [
     "def square_number(x: int) -> int:\n",
-    "    return x ** 2"
+    "    return x**2"
    ]
   },
   {
