--- a/cookies_testing.ipynb
+++ b/cookies_testing.ipynb
@@ -469,6 +469,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7692045d-f8b1-43ae-8ce8-09089f9b1fca",
+   "metadata": {},
+   "source": [
+    "# Parting Thoughts\n",
+    "\n",
+    "How should you start testing in your work?\n",
+    "\n",
+    "1. Start small. Pick a function or two that you use all the time, or a function you are about to change, and try to write some tests in a Jupyter notebook.\n",
+    "2. Don't test too much. Not every function requires a test.\n",
+    "3. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27",
    "metadata": {},
    "source": [
