--- a/cookies_testing.ipynb
+++ b/cookies_testing.ipynb
@@ -478,7 +478,9 @@
     "\n",
     "1. Start small. Pick a function or two that you use all the time, or a function you are about to change, and try to write some tests in a Jupyter notebook.\n",
     "2. Don't test too much. Not every function requires a test.\n",
-    "3. "
+    "3. When you find a bug in your code, write a test for it! Over time, your code will become bulletproof!\n",
+    "\n",
+    "Reach out with any questions, I'm always happy to help."
    ]
   },
   {
